<resources>
    <string name="app_name" translatable="false">ShowCase Plus</string>
    <string name="no_permission_dialog_ok">OK</string>
    <string name="no_permission_dialog_cancel">Cancel</string>
    <string name="place_of_birth">Place of Birth: %1$s</string>
    <string name="birthday">Birthday: %1$s</string>
    <string name="cast_movie_title">Part of the cast in</string>
    <string name="crew_movie_title">Part of the crew in</string>
    <string name="movie_added">Movie added</string>
    <string name="series_added">Show added</string>
    <string name="show_added_error">Could not add show to database</string>
    <string name="start_date">Started on: %1$s</string>
    <string name="start_date_unknown">Start date: Not set </string>
    <string name="finish_date">Finished on: %1$s</string>
    <string name="finish_date_unknown">Finish date: Not set </string>
    <string name="times_watched">Times Watched: %1$d</string>
    <string name="times_watched_default" translatable="false">1</string>
    <string name="episodes_seen">Episodes seen: %1$d/%2$d</string>
    <string name="rating">"Rating: "</string>
    <string name="show_rating_default" translatable="false">0</string>
    <string name="change_start_date_2">"Start date: "</string>
    <string name="change_finish_date_2">"Finish date: "</string>
    <string name="change_watched_times">"Times watched: "</string>
    <string name="cast_title">Cast</string>
    <string name="crew_title">Crew</string>
    <string name="recommendations_title">Recommendations</string>
    <string name="category_picker">Pick the appropriate category</string>
    <string name="categories">Categories</string>
    <string name="show_category">"Category: "</string>
    <string name="sort_by">Sort By</string>
    <string name="default_sort">Default</string>
    <string name="most_popular">Most Popular</string>
    <string name="best_rated">Best Rated</string>
    <string name="release_date">Release Date</string>
    <string name="alphabetic_order">A–Z</string>
    <string name="watching">Watching</string>
    <string name="plan_to_watch">Plan to Watch</string>
    <string name="watched">Watched</string>
    <string name="on_hold">On Hold</string>
    <string name="dropped">Dropped</string>
    <string name="dates">Dates</string>
    <string name="in_the_theater_right_now">In theatres</string>
    <string name="between_two_dates">Between two dates</string>
    <string name="end_date">"End date: "</string>
    <string name="genres">Genres</string>
    <string name="advanced">Advanced</string>
    <string name="keyword_text">Exclude and include keywords by putting their IDs in the respective text box below.\n * Use , (comma) to indicate you mean both keywords.\n * Use | (pipe) to indicate you want one or the other.</string>
    <string name="with_keywords_hint">Include media with the keywords…</string>
    <string name="without_keywords_hint">Exclude media with the keywords…</string>
    <string name="movie_tab_title">Movies</string>
    <string name="series_tab_title">Shows</string>
    <string name="saved_tab_title">Saved</string>
    <string name="write_to_external_storage_as">"Saved as: "</string>
    <string name="choose_export_file">Choose a file format to export:</string>
    <string name="choose_file">Choose a file to import:</string>
    <string name="import_cancel">Cancel</string>
    <string name="file_not_found_exception">Could not find the file</string>
    <string name="hint_search">Search…</string>
    <string name="action_export">Export</string>
    <string name="action_import">Import</string>
    <string name="action_save">Save</string>
    <string name="title_general">General</string>
    <string name="title_show_cast">Display cast</string>
    <string name="title_show_crew">Display crew</string>
    <string name="title_show_recommendations">Display recommendations</string>
    <string name="title_show_save_dialog">Display save dialog</string>
    <string name="title_persistent_filtering">Persistent filter</string>
    <string name="summary_persistent_filtering">Auto-filter media when starting the app</string>
    <string name="title_show_representation">Media representation</string>
    <string name="title_shows_in_grid">Display media in a grid</string>
    <string name="title_grid_size">Grid size</string>
    <string name="summary_grid_size">Amount of items in a row</string>
    <string name="title_data_usage">Data usage</string>
    <string name="title_live_search">Use live search</string>
    <string name="title_hide_tabs">Tabs visibility</string>
    <string name="summary_hide_tabs">Restart the app to apply changes.</string>
    <string name="title_hide_movies_tab">Hide the \'Movies\' tab</string>
    <string name="title_hide_series_tab">Hide the \'Shows\' tab</string>
    <string name="title_hide_saved_tab">Hide the \'Saved\' tab</string>
    <string name="title_api_language">API language</string>
    <string name="summary_api_language">Set the language of the API data (otherwise defaults to system language).</string>
    <string name="text_tmdb_credits">This product uses the TMDB API but is not endorsed or certified by TMDB</string>
    <string name="action_settings">Settings</string>
    <string name="no_internet_connection">There is no Internet connection</string>
    <string name="title_movies">Movies</string>
    <string name="title_series">Shows</string>
    <string name="title_saved">Saved</string>
    <string name="title_account">Account</string>
    <string name="title_people">People</string>
    <string name="collapse_icon_description">Collapses or expands the view</string>
    <string name="image_description">Poster of the show</string>
    <string name="person_image_description">Picture of the person</string>
    <string name="movie_image_description">Image from the show</string>
    <string name="edit_icon_description">Turns on \'edit\' mode</string>
    <string name="file_picked_success">File selected</string>
    <string name="login">Log In</string>
    <string name="lists">Lists</string>
    <string name="episodes">Episodes:</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="list_name">List Name</string>
    <string name="create_list">Create List</string>
    <string name="previous_lists">Prior Lists</string>
    <string name="create_new_list">Create New List</string>
    <string name="enter_list_name">Enter List Name</string>
    <string name="export">Export</string>
    <string name="login_successful">Logged in</string>
    <string name="experimental">Experimental</string>
    <string name="dynamic_color_preference_summary">Colours the details page will be based on movie or cast image colour.</string>
    <string name="dynamic_color_preference_title">Dynamically colored details page</string>
    <string name="share_link_button">Share link button</string>
    <string name="database_import_successful">Database imported. Please reopen the app.</string>
    <string name="notification">Notification</string>
    <string name="summary_notification_one">This preference applies to upcoming movies and shows (including individual episodes) of \"Saved\" and from \"Trakt\" account</string>
    <string name="get_notified_for_saved_movies">Get notified</string>
    <string name="summary_notification_two">Get notified for upcoming items of Trakt account and \"Saved\" when released.</string>
    <string name="not_logged_in">You are not logged in</string>
    <string name="logged_in">You are logged in</string>
    <string name="other">Other</string>
    <string name="get_notified">Get Notified</string>
    <string name="title">Title</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Log Out</string>
    <string name="user_name">Username</string>
    <string name="private_list">Private</string>
    <string name="watchlist">WatchList</string>
    <string name="add_to_list">List</string>
    <string name="favourite">Favourite</string>
    <string name="rate">Rate</string>
    <string name="overview">Overview</string>
    <string name="other_details">Other Details</string>
    <string name="country">Country</string>
    <string name="revenue">Budget / Revenue</string>
    <string name="status">Status</string>
    <string name="add_to_favourite">Add to favourite</string>
    <string name="add_rating">Add rating</string>
    <string name="get_notified_for_episode">You will get notified when episodes of %1$s release</string>
    <string name="error_reminder_episode">Could not save reminder for %1$s</string>
    <string name="removed_from_reminder">%1$s removed from reminders</string>
    <string name="crash_log_copied">Crash log copied to clipboard</string>
    <string name="permission_required">Permission required</string>
    <string name="permission_required_description">This permission is needed to show notifications. There are no spam notifications.</string>
    <string name="ok">OK</string>
    <string name="released_movies">Released Movies</string>
    <string name="notification_for_movie_released">Get notified when a movie is released.</string>
    <string name="aired_episodes">Aired Episodes</string>
    <string name="notification_for_episode_air">Be notified when an episode is aired.</string>
    <string name="not_rated">Not Rated</string>
    <string name="unknown">Unknown</string>
    <string name="no_description">No description</string>
    <string name="logged_out_successfully">Logged out</string>
    <string name="rating_delete_success">Rating deleted</string>
    <string name="delete_rating_fail">Could not delete rating</string>
    <string name="list_delete_success">List deleted</string>
    <string name="failed_to_delete_list">Could not delete list</string>
    <string name="media_removed_from_list">Media removed from list</string>
    <string name="failed_to_remove_media_from_list">Could not remove media from list</string>
    <string name="list_created_successfully">List created</string>
    <string name="failed_to_create_list">Could not create list</string>
    <string name="added_to_watchlist">Added to watchlist</string>
    <string name="removed_from_watchlist">Removed from watchlist</string>
    <string name="media_added_to_list">Media added to list</string>
    <string name="failed_to_add_media_to_list">Could not add media to list</string>
    <string name="added_to_favourites">Added to favourites</string>
    <string name="removed_from_favourites">Removed from favourites</string>
    <string name="rating_added_successfully">Rating added</string>
    <string name="failed_to_add_rating">Could not add rating.</string>
    <string name="episode_airing_today">Episode %1$s (%2$s) is airing today!</string>
    <string name="movie_released_today">%1$s is released today!</string>
    <string name="episodes_removed">All episodes marked as watched</string>
    <string name="episodes_added">All episodes marked as unwatched</string>
    <string name="error_occurred_in_list_data">Could not fetch list data</string>
    <string name="login_failed">Something went wrong. Please log in again.</string>
    <string name="selected_directory">Path:</string>
    <string name="export_info">The app allows for the exportation of files in \".db\", \".json\" and \".csv\" formats. Please note, however, that only the \".db\" format is supported for subsequent imports.</string>
    <string name="auto_backup_directory_selection">Select Directory for Auto-backup</string>
    <string name="enable_auto_backup">Turn on auto-backup</string>
    <string name="backup_frequency">Backup Frequency</string>
    <string name="backup_to_google_drive">Backup to Google Drive</string>
    <string name="authorize_google_drive">Authorize Google Drive</string>
    <string name="backup_settings">Backup Settings</string>
</resources>