<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     This file is part of "ShowCase" formerly Movie DB. <https://github.com/WirelessAlien/MovieDB>
  ~     forked from <https://notabug.org/nvb/MovieDB>
  ~
  ~     Copyright (C) 2024  WirelessAlien <https://github.com/WirelessAlien>
  ~
  ~     ShowCase is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     ShowCase is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with "ShowCase".  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollFlags="noScroll"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="92dp"
                android:layout_height="92dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:src="@drawable/ic_export_db"
                android:importantForAccessibility="no" />

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <TextView
                   android:id="@+id/selected_directory_text"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/selected_directory"
                   android:scrollHorizontally="true"
                   android:textSize="16sp"
                   android:ellipsize="end"
                   android:layout_marginTop="16dp"
                   android:layout_marginBottom="16dp"/>

               <ImageView
                   android:id="@+id/edit_icon"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentEnd="true"
                   android:layout_centerVertical="true"
                   android:src="@drawable/ic_edit"/>

           </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/export_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="5dp"
                android:text="@string/export" />

            <TextView
                android:id="@+id/backupSettingd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backup_settings"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="16dp"/>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/autoBackupSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/enable_auto_backup"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/backupBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cornerRadius="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/auto_backup_directory_selection"/>

            <TextView
                android:id="@+id/backupFrequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backup_frequency"
                android:textSize="16sp"
                android:layout_marginTop="16dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_marginTop="10dp"
                android:hint="@string/backup_frequency">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/backupFrequencyET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:gravity="center_vertical"
                    android:inputType="number"
                    android:imeOptions="actionDone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/backupToDrive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backup_to_google_drive"
                android:textSize="16sp"
                android:layout_marginTop="16dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/googleSignInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/authorize_google_drive"
                app:cornerRadius="5dp"
                android:layout_marginTop="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/googleDriveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/backup_to_google_drive" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="5dp"/>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/autoBackupSwitchDrive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/enable_auto_backup"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_marginTop="10dp"
                android:hint="@string/backup_frequency">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/backupFrequencyETDrive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:imeOptions="actionDone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/export_info"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:drawablePadding="5dp"
                android:alpha="0.8"
                app:drawableStartCompat="@drawable/ic_info" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>